--- a/rag-web.ipynb
+++ b/rag-web.ipynb
@@ -2,7 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import requests\n",
+    "# from bs4 import BeautifulSoup\n",
+    "\n",
+    "# # Extrae los párrafos de la página web\n",
+    "# def extract_paragraphs_from_web(url):\n",
+    "#     # Realizamos la solicitud HTTP a la página web\n",
+    "#     response = requests.get(url)\n",
+    "#     if response.status_code != 200:\n",
+    "#         print(f\"Error al acceder a la página: {response.status_code}\")\n",
+    "#         return []\n",
+    "\n",
+    "#     # Parseamos el contenido HTML de la página\n",
+    "#     soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "    \n",
+    "#     # Buscamos el contenido principal. Modifica 'div.content' según la estructura del sitio web.\n",
+    "#     content = soup.find('div', {'class': 'content'})  \n",
+    "    \n",
+    "#     if not content:\n",
+    "#         print(\"No se pudo encontrar el contenido principal de la página.\")\n",
+    "#         return []\n",
+    "\n",
+    "#     # Extraemos los párrafos del contenido principal\n",
+    "#     paragraphs = content.find_all('p')\n",
+    "    \n",
+    "#     # Convertimos los elementos <p> a texto y eliminamos espacios innecesarios\n",
+    "#     return [paragraph.get_text(strip=True) for paragraph in paragraphs if paragraph.get_text(strip=True)]\n",
+    "\n",
+    "# # URL del artículo\n",
+    "# url = \"https://oyister.oyis.org/articles/book-review-the-stranger-by-albert-camus\"\n",
+    "\n",
+    "# # Llamada a la función\n",
+    "# web_paragraphs = extract_paragraphs_from_web(url)\n",
+    "\n",
+    "# print(web_paragraphs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -17,16 +59,8 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
+    "# Extrae el texto de la página web y divide cada línea en un fragmento de texto\n",
     "def extract_lines_from_web(url):\n",
-    "    \"\"\"\n",
-    "    Extrae el texto de la página web y divide cada línea en un fragmento de texto.\n",
-    "    \n",
-    "    Args:\n",
-    "        url (str): URL de la página web.\n",
-    "        \n",
-    "    Returns:\n",
-    "        list: Lista de líneas extraídas de la página web.\n",
-    "    \"\"\"\n",
     "    # Realizamos la solicitud HTTP a la página web\n",
     "    response = requests.get(url)\n",
     "    if response.status_code != 200:\n",
@@ -36,9 +70,8 @@
     "    # Parseamos el contenido HTML de la página\n",
     "    soup = BeautifulSoup(response.text, 'html.parser')\n",
     "    \n",
-    "    # Extraemos el texto de la página web. Ajusta el selector según sea necesario.\n",
-    "    # Aquí estoy asumiendo que el texto principal está en un artículo con la clase 'article-content'\n",
-    "    content = soup.find('div', {'class': 'content'})  # Cambiar según la estructura de la página\n",
+    "    # Extraemos el texto de la página web. El texto principal está en un artículo con la clase 'article-content'\n",
+    "    content = soup.find('div', {'class': 'content'})  \n",
     "    \n",
     "    if not content:\n",
     "        print(\"No se pudo encontrar el contenido principal de la página.\")\n",
@@ -53,20 +86,17 @@
     "    # Filtramos líneas vacías y devolvemos solo las líneas no vacías\n",
     "    return [line.strip() for line in lines if line.strip()]\n",
     "\n",
-    "# Ejemplo de uso\n",
     "\n",
-    "url = \"https://oyister.oyis.org/articles/book-review-the-stranger-by-albert-camus\"\n",
+    "url = \"https://oyister.oyis.org/articles/book-review-the-stranger-by-albert-camus\" \n",
     "\n",
-    "# Extraer líneas de la página web\n",
     "web_lines = extract_lines_from_web(url)\n",
     "\n",
-    "# Imprimir las líneas extraídas\n",
     "print(web_lines)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,49 +146,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "8"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "question = \"Name of the protagonist\"\n",
-    "docs = vector_store.similarity_search(question)\n",
+    "question = \"Tell me about the philosophy of the book\"\n",
+    "docs = vector_store.similarity_search(question, k=8)\n",
     "len(docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Document(metadata={}, page_content='The main character of')"
+       "[Document(metadata={}, page_content='written by French writer Albert Camus is a novel that is centered around the philosophical idea of existentialism.'),\n",
+       " Document(metadata={}, page_content='written by French writer Albert Camus is a novel that is centered around the philosophical idea of existentialism.'),\n",
+       " Document(metadata={}, page_content='written by French writer Albert Camus is a novel that is centered around the philosophical idea of existentialism.'),\n",
+       " Document(metadata={}, page_content='. I learned that I am responsible to make decisions based on my own beliefs and values. This book inspired me to become less bound by societal expectations and to start inquiring about what kind of person I truly am.'),\n",
+       " Document(metadata={}, page_content='. I learned that I am responsible to make decisions based on my own beliefs and values. This book inspired me to become less bound by societal expectations and to start inquiring about what kind of person I truly am.'),\n",
+       " Document(metadata={}, page_content='. I learned that I am responsible to make decisions based on my own beliefs and values. This book inspired me to become less bound by societal expectations and to start inquiring about what kind of person I truly am.'),\n",
+       " Document(metadata={}, page_content='If you’re interested in reading the book, it will hopefully be as thought-provoking and compelling as it was for me.'),\n",
+       " Document(metadata={}, page_content='If you’re interested in reading the book, it will hopefully be as thought-provoking and compelling as it was for me.')]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "docs[0]"
+    "docs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,22 +227,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The author of the book is Albert Camus, a French writer.'"
+       "'The philosophy of the book is centered around existentialism, a philosophical idea that emphasizes individual freedom and choice. According to the context provided, this novel inspired its reader to become less bound by societal expectations and to question their own identity, suggesting that the book encourages readers to take personal responsibility for making decisions based on their own beliefs and values.'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chain.invoke(\"Tell me about the author of the book\")"
+    "chain.invoke(\"Tell me about the philosophy of the book\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"The main character's name is Meursault, and he personifies existentialism. He is portrayed as an anomaly in society, not adhering to traditional expectations or values. Throughout the story, his actions and reactions suggest that he is cynical about societal norms and may be considered a psychopath by some standards. However, after reading the book, it seems that the author's view on Meursault has changed, indicating that there may be more depth to his character than initially meets the eye.\""
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke(\"Tell me about the main character\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"There is no information provided in the context about a review. The context only mentions four documents with identical metadata and page content ('a'). Therefore, it's not possible to form an opinion or answer a question about a review based on this context.\""
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke(\"What do you think about the review?\")"
    ]
   }
  ],
