work in progress

--- a/GUI pdf input?.ipynb
+++ b/GUI pdf input?.ipynb
@@ -2,195 +2,101 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'frontend'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfitz\u001b[39;00m  \u001b[38;5;66;03m# PyMuPDF\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mextract_lines_from_pdf_pymupdf\u001b[39m(pdf_path):\n\u001b[1;32m      4\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124;03m    Extrae las líneas completas de texto de un archivo PDF utilizando PyMuPDF.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124;03m    \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;124;03m        list: Lista de líneas extraídas del PDF.\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/rag/lib/python3.13/site-packages/fitz/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfrontend\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtools\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpath\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mop\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'frontend'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import fitz  # PyMuPDF\n",
-    "\n",
-    "def extract_lines_from_pdf_pymupdf(pdf_path):\n",
-    "    \"\"\"\n",
-    "    Extrae las líneas completas de texto de un archivo PDF utilizando PyMuPDF.\n",
-    "    \n",
-    "    Args:\n",
-    "        pdf_path (str): Ruta del archivo PDF.\n",
-    "        \n",
-    "    Returns:\n",
-    "        list: Lista de líneas extraídas del PDF.\n",
-    "    \"\"\"\n",
+    "import gradio as gr\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain_ollama.chat_models import ChatOllama\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "from langchain_chroma import Chroma\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain_ollama.chat_models import ChatOllama\n",
+    "import fitz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variable global para almacenar las líneas extraídas del PDF\n",
+    "pdf_lines = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función para extraer las líneas del PDF\n",
+    "def extract_lines_from_pdf_pymupdf(pdf_file):\n",
+    "    import fitz  # PyMuPDF\n",
     "    lines = []\n",
-    "    with fitz.open(pdf_path) as doc:\n",
+    "    with fitz.open(pdf_file.name) as doc:\n",
     "        for page in doc:\n",
     "            text = page.get_text(\"text\")  # Obtener texto como líneas completas\n",
     "            page_lines = text.splitlines()\n",
     "            lines.extend([line.strip() for line in page_lines if line.strip()])\n",
-    "    return lines\n",
-    "\n",
-    "pdf_path = \"./Dialnet-LaViolenciaComoOpcionCreativaEnLaObraDeMartinScors-7009818.pdf\"  \n",
-    "pdf_lines = extract_lines_from_pdf_pymupdf(pdf_path)\n",
-    "print(pdf_lines)"
+    "    return lines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_huggingface import HuggingFaceEmbeddings\n",
-    "\n",
-    "embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-mpnet-base-v2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_chroma import Chroma\n",
-    "\n",
-    "\n",
-    "vector_store = Chroma.from_texts(\n",
-    "    texts=pdf_lines,\n",
-    "    collection_name=\"pdf-gui\",\n",
-    "    embedding=embeddings,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_chroma import Chroma\n",
-    "\n",
-    "vector_store = Chroma(\n",
-    "    collection_name=\"pdf-gui\",\n",
-    "    embedding_function=embeddings,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "retriever = vector_store.as_retriever()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "question = \"Como me llamo?\"\n",
-    "docs = vector_store.similarity_search(question)\n",
-    "len(docs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Document(metadata={}, page_content='Me llamo Martin, nací el 26 de noviembre de 2004')"
-      ]
-     },
-     "execution_count": 156,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "docs[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain_ollama.chat_models import ChatOllama\n",
-    "from langchain_core.runnables import RunnableLambda, RunnablePassthrough\n",
-    "\n",
-    "# Prompt\n",
-    "template = \"\"\"Answer the question based only on the following context:\n",
-    "{context}\n",
-    "\n",
-    "Question: {question}\n",
-    "\"\"\"\n",
-    "prompt = ChatPromptTemplate.from_template(template)\n",
-    "\n",
-    "# Local LLM\n",
-    "ollama_llm = \"llama3.2\"\n",
-    "model_local = ChatOllama(model=ollama_llm)\n",
-    "\n",
-    "# Chain\n",
-    "chain = (\n",
-    "    {\"context\": retriever, \"question\": RunnablePassthrough()}\n",
-    "    | prompt\n",
-    "    | model_local\n",
-    "    | StrOutputParser()\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def search_chroma(input,history):\n",
+    "# Función para realizar la búsqueda con Chroma y responder preguntas\n",
+    "def search_chroma(input, pdf_file=None):\n",
+    "    global pdf_lines  # Usamos la variable global pdf_lines\n",
+    "    \n",
     "    try:\n",
-    "        # Invocar la cadena con la consulta como input\n",
+    "        if not pdf_lines:  # Si pdf_lines está vacío, procesamos el archivo\n",
+    "            pdf_lines = extract_lines_from_pdf_pymupdf(pdf_file)\n",
+    "        \n",
+    "        # Inicializar el modelo de embeddings y el almacenaje de vectores Chroma\n",
+    "        embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-mpnet-base-v2\")\n",
+    "        \n",
+    "        # Crear el almacén de vectores Chroma\n",
+    "        vector_store = Chroma.from_texts(\n",
+    "            texts=pdf_lines,\n",
+    "            collection_name=\"pdf-input\",\n",
+    "            embedding=embeddings,\n",
+    "        )\n",
+    "\n",
+    "        # Crear el recuperador (retriever)\n",
+    "        retriever = vector_store.as_retriever()\n",
+    "\n",
+    "        # Plantilla de Prompt\n",
+    "        template = \"\"\"Answer the question based only on the following context:\n",
+    "        {context}\n",
+    "\n",
+    "        Question: {question}\n",
+    "        \"\"\"\n",
+    "        prompt = ChatPromptTemplate.from_template(template)\n",
+    "\n",
+    "        # Modelo de chat con Ollama\n",
+    "        ollama_llm = \"llama3.2\"\n",
+    "        model_local = ChatOllama(model=ollama_llm)\n",
+    "\n",
+    "        # Crear la cadena de procesamiento\n",
+    "        chain = (\n",
+    "            {\"context\": retriever, \"question\": RunnablePassthrough()}\n",
+    "            | prompt\n",
+    "            | model_local\n",
+    "            | StrOutputParser()\n",
+    "        )\n",
+    "\n",
+    "        # Ejecutar la cadena con la consulta\n",
     "        response = chain.invoke(input)\n",
-    "        return response  \n",
+    "        return response\n",
     "    except Exception as e:\n",
-    "        # Manejo de errores\n",
     "        return f\"Error al procesar la consulta: {e}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gradio as gr"
    ]
   },
   {
@@ -203,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7913\n",
+      "* Running on local URL:  http://127.0.0.1:7892\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -218,7 +124,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7913/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7892/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -231,22 +137,38 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 160,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Definir la interfaz de chat\n",
+    "# Crear la interfaz con Gradio\n",
     "with gr.Blocks(theme=gr.themes.Glass()) as demo:\n",
-    "    gr.Markdown(\"### Chat con llama3.2\")\n",
-    "    \n",
-    "    # Crear el ChatInterface para manejar la interacción\n",
-    "    chat_interface = gr.ChatInterface(fn=search_chroma,type=\"messages\",\n",
-    "                                       examples=[\"Quien es Martin Scorsese\", \"Que relación tiene la violencia es sus películas?\", \"Háblame de Goodfellas\"],\n",
-    "                                       #example_labels=['ej1','ej2','ej3'],\n",
-    "                                       #analytics_enabled=True\n",
-    "                                       )\n",
+    "    gr.Markdown(\"### Chat con modelo de análisis de PDF\")\n",
+    "\n",
+    "    # Sección para el chat\n",
+    "    chat_interface = gr.ChatInterface(\n",
+    "        fn=search_chroma,\n",
+    "        type=\"messages\",\n",
+    "        examples=[\"¿Quién es Martin Scorsese?\", \"¿Qué relación tiene la violencia en sus películas?\", \"Háblame de Goodfellas\"],\n",
+    "    )\n",
+    "\n",
+    "    # Espacio para subir archivos\n",
+    "    with gr.Row():\n",
+    "        gr.Markdown(\"### Subir un archivo para analizar:\")\n",
+    "        file_uploader = gr.File(label=\"Sube tu archivo aquí\", file_types=[\".pdf\"])\n",
+    "        output = gr.Textbox(label=\"Salida\", lines=10)\n",
+    "        submit_button = gr.Button(\"Procesar archivo\")\n",
+    "\n",
+    "    # Conectar el procesamiento del archivo con el chat\n",
+    "    def process_file(pdf_file):\n",
+    "        global pdf_lines\n",
+    "        pdf_lines = extract_lines_from_pdf_pymupdf(pdf_file)\n",
+    "        return \"Archivo procesado. Puedes hacer preguntas ahora.\"\n",
+    "\n",
+    "    # Conectar el botón de envío a la función de procesamiento\n",
+    "    submit_button.click(fn=process_file, inputs=file_uploader, outputs=output)\n",
     "\n",
     "# Lanzar la interfaz\n",
     "demo.launch()"
