--- a/rag-MongoAtlas.ipynb
+++ b/rag-MongoAtlas.ipynb
@@ -222,7 +222,7 @@
     "\"\"\"\n",
     "\n",
     "# Authenticate to Hugging Face and access the model\n",
-    "os.environ[\"HF_TOKEN\"] = \"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\"\n",
+    "os.environ[\"HF_TOKEN\"] = \"mitoken\"\n",
     "llm = InferenceClient(\n",
     "    \"mistralai/Mistral-7B-Instruct-v0.3\",\n",
     "    token = os.getenv(\"HF_TOKEN\"))\n",
